ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/execution_view_snapshot__enter_expands_the_next_run_and_the_pane_follows.snap
---
source: crates/ainb-plugin-hangar/tests/execution_view_snapshot.rs
expression: "glyph_map(&buf, 100)"
---
╭─ 📋 HGR-5 · Ticket stats: GET /api/tickets/stats ─────────────────────────────────────────────────╮
│ ✗ rev-1 failed in 5m 00s                                                                         │
│──────────────────────────────────────────────────────────────────────────────────────────────────│
│ in progress · P2 · agent:AYF56V · created 2026-09-01 · @boxtrack · main → main                   │
│──────────────────────────────────────────────────────────────────────────────────────────────────│
│ Add GET /api/tickets/stats to the hono api under api/: returns {total, open, closed}.            │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
runs ───────────────────────────────────────────────────────────────────────────────────────────────
  ◔ impl-1 · running · 2m 00s
▶ ✗ rev-1 · failed in 5m 00s
transcript ─────────────────────────────────────────────────────────────────────────────────────────
no transcript for this run — only the newest run's is readable
